# rust-node-modules-cleaner

./: .gitignore  .goreleaser.yml  Cargo.toml  PKGBUILD  README.md  \  patterns.json
.github/workflows/: release.yml
old/: cli.rs  reader.rs
src/: cli.rs  config.rs  file_system.rs  fs_utils.rs  main.rs  matcher.rs  reader.rs  utils.rs
src/config/: cli.rs  config_validator.rs  mod.rs  parse_custom_paterns.rs  parse_settings.rs
src/file_system/: remover.rs
src/file_utils/: fs_utils.rs  matcher.rs  mod.rs  remover.rs
src/rust-node-modules-cleaner-main/: LICENSE
src/rust-node-modules-cleaner-main/src/: main.rs
src/tui/: app.rs  engine.rs  layout.rs  lib.rs  main.rs  mod.rs  tui.rs  widgets.rs
src/utils/: g_utils.rs  mod.rs  read_size.rs
