[package]
name = "node-cleaner"
version = "0.1.3"
edition = "2024"

[dependencies]
jwalk = "0.8"
walkdir = "2.3"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
clap-verbosity-flag = "2.0"
once_cell = "1.18"

# Optional - for even faster hash maps
fxhash = { version = "0.2", optional = true }
chrono = "0.4.41"

[features]
use-fxhash = ["fxhash"]
