[package]
name = "node-cleaner"
version = "0.2.6"
edition = "2024"
authors = ["Brean", ""]
description = "A tool for cleaning and managing node_modules directories"
repository = "https://github.com/Breinss/rust-node-modules-cleaner"
homepage = ""
license = "MIT"

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
jwalk = "0.8"
walkdir = "2.3"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
clap-verbosity-flag = "2.0"
once_cell = "1.18"

# Optional - for even faster hash maps
fxhash = { version = "0.2", optional = true }
chrono = "0.4.41"
indicatif = "0.17.11"
indicatif-log-bridge = "0.2.3"
dialoguer = "0.11.0"

[features]
use-fxhash = ["fxhash"]

[build]
rustflags = ["-C", "target-cpu=native"]
